--- a/基础物理/杨振宁/第十讲.md
+++ b/基础物理/杨振宁/第十讲.md
@@ -157,43 +157,69 @@ So we usually think of the motion of a rigid body to be the motion of its center
 $$\vec{v}=\vec{v}_{\text{com}} + \vec{\omega} \times\vec{r}$$
 $\vec{r}$ 是点相对于质心的位置矢量。
 
+What we have just discussed is a very important thing. We resolve the motion of a rigid body into two vectors. And this formula gives you the instantaneous velocity of every point on the rigid body. We have given a geometrical proof. The key point of the geometrical proof is to show that in a rigid rotation where one point is not moved, there is always a whole axis which is not moved. We can show this also algebraically. To do this, we need some matrix theory.(我们刚才讨论的是一件非常重要的事情。我们将刚体的运动分解为两个向量。这个公式给出了刚体上每一点的瞬时速度。我们已经给出了几何证明。几何证明的关键在于表明，在一个固定一点不动的刚体旋转中，总存在一个整个轴是不动的。我们也可以用代数方法来证明这一点。为此，我们需要一些矩阵理论。)
 
-What we have just discussed is a very important thing.
-We resolve the motion of a rigid body into two vectors. And this formula gives you the instantaneous velocity of every point on the rigid body. We have given a geometrical proof.
-The key point of the geometrical proof is to show that in a rigid rotation where one point is not moved, there is always a whole axis which is not moved. We can show this also algebraically. To do this, we need some matrix theory.
-It's linear algebra. How many people have learned some linear algebra so far? Nobody? How many people have not learned linear algebra? Zero plus zero cannot be equal to one. So something is wrong.
-Don't be bashful. Oh, is everybody studying linear algebra now? Oh, and have you learned the matrix multiplication? OK. OK, let's let's go through that once more.
-I can write the coordinate X, Y, Z as a column. And let's call it R. Instead of the vector R, I now form it into a matrix. And I have a tilde.
-Tilde is to turn the matrix and turn this red column into a row. So tilde is equal to. So a matrix which is like this.
-After you do the tilde, it becomes like this. You take this 45 degree and rotate it in this form. So what is R tilde R? R tilde R is X, Y, Z times X, Y, Z. When you multiply two matrices, you just take this column and multiply this.
-So it becomes X square plus Y square plus Z square. Now, let us write IJK. Let us give it an arbitrary symbol.
-Let's call it X. Now, XR is therefore equal to XI plus YJ plus ZK. By definition, when I multiply an X, the R here, we can have the arrow. We don't need the arrows.
-It doesn't matter whether you write an arrow over it. This is a row. This is a column.
-So it's like this. Now, let us rotate the coordinate system. Call that X prime.
-So I've already done IJK. I've rotated the coordinate system. I shall call it I prime, J prime, K prime.
-And I write this as a row matrix, X prime. Now, X prime, R prime is equal to X prime, I prime, plus Y prime, J prime, plus Z prime, K prime. And so this is the coordinate.
-This describes the point. This describes the same point. So therefore, they have to be the same.
-So X prime, R prime is equal to XR. That means the relationship between X prime and X and also the relationship between R prime and R are linear. So I was a column is equal to a matrix which has a gamma times R. This gamma is a is a three by three matrix.
-And this is this is all this is all fine. I'm not going to erase this. It's especially if we do it the other way.
-X prime is equal to I prime, J prime, K prime. Now, I prime is a linear combination of IJK and J prime. J prime is the new y-axis.
-It's a linear combination of the i, j, k. K prime is a linear combination of i, j, k. So therefore, x prime is equal to x times the matrix gamma. This is a row. This is a row.
-This is a column. There are nine elements of gamma. Each element is the coefficient in the expression of i prime or j prime or k prime in terms of i, j, k. If I substitute that into here, I get gamma.
-Therefore, if I multiply this by the inverse, how do I know that gamma has an inverse? I'll come to that in one minute. If I multiply both sides by gamma inverse, I get r prime equal to gamma inverse r. We couldn't define gamma inverse by this formula. In other words, r prime is x prime, y prime, z prime.
-x prime, y prime, z prime are linear combinations of x, y, z. And so it has the nine coefficients, and the nine coefficients is gamma inverse. Now, we know that r prime, that by definition is x prime squared plus y prime squared plus z prime squared. And that's clearly equal to x squared plus y squared plus z squared, because that's the distance squared from the origin.
-So this is equal to r. Now, I plug that formula in. Therefore, this side. Now, when you take a wiggle of A, B, does anybody know how to take? A is a matrix.
-This is more general than what we just looked at. Suppose I have, when you multiply two matrices together, A and B, they can both be rectangular of whatever size, but there's one thing that must match. Namely, the width of the first one must be equal to the height of the second one.
-Otherwise, you cannot multiply them. Because when you multiply, you always take, let's say there are three elements here. Let's call them alpha, beta, gamma.
-And this is A, B, C. There is alpha A plus beta B plus gamma C. So this width must be equal to this height. But after you multiply it, otherwise there's no restriction. And the result of this has the height of this one and the width of this one.
-When you multiply A and B, the final result has a height, which is the height of A, has a width, which is the width of B. And there's a formula of A, when you turn it into a tilde, the theorem is that this is a trivial theorem. It's equal to B tilde times A tilde. But you have to, you have to write the order differently.
+It's linear algebra. How many people have learned some linear algebra so far? Nobody? How many people have not learned linear algebra? Zero plus zero cannot be equal to one. So something is wrong. Don't be bashful. Oh, is everybody studying linear algebra now? Oh, and have you learned the matrix multiplication? OK. OK, let's let's go through that once more.
+I can write the coordinate X, Y, Z as a column. And let's call it R. Instead of the vector R, I now form it into a matrix. And I have a tilde.(这是线性代数。到目前为止有多少人学过一些线性代数？没有人吗？有多少人没学过线性代数？零加零不可能等于一。所以肯定有问题。别害羞。哦，现在大家都在学线性代数吗？哦，你们学过矩阵乘法吗？好的。好的，让我们再复习一遍。我可以把坐标 X、Y、Z 写成一列。我们称它为 r。现在我不再用向量 r，而是把它构成一个矩阵。我加了一个波浪号。$\tilde{r}$)
+
+Tilde is to turn the matrix and turn this red column into a row. So tilde is equal to. So a matrix which is like this. After you do the tilde, it becomes like this. You take this 45 degree and rotate it in this form. So what is R tilde R? R tilde R is X, Y, Z times X, Y, Z. When you multiply two matrices, you just take this column and multiply this. So it becomes X square plus Y square plus Z square. Now, let us write IJK. Let us give it an arbitrary symbol.(波浪号的作用是将矩阵旋转，使这个列变为行。因此波浪号相当于。所以一个像这样的矩阵。当你应用波浪号后，它就变成了这样。你以45度角按这种形式旋转它。那么 $\tilde{r}r$ 是什么呢？R波浪号R就是X、Y、Z乘以X、Y、Z。当你将两个矩阵相乘时，只需取这一列与之相乘。因此它变成了X平方加Y平方加Z平方。现在，让我们写出IJK。让我们给它一个任意符号。)
+
+$$\tilde{r}r = [x\ y\ z] \begin{pmatrix} x \\ y \\ z \end{pmatrix}=x^2+y^2+z^2$$
+
+Let's call it X. Now, XR is therefore equal to XI plus YJ plus ZK. By definition, when I multiply an X, the R here, we can have the arrow. We don't need the arrows. It doesn't matter whether you write an arrow over it. This is a row. This is a column. So it's like this. Now, let us rotate the coordinate system. Call that X prime. So I've already done IJK. I've rotated the coordinate system. I shall call it I prime, J prime, K prime.(我们称之为X。那么，XR就等于XI加上YJ加上ZK。根据定义，当我乘以X，也就是这里的R时，我们可以画箭头。其实不需要箭头。你画不画箭头都无所谓。这是一个行向量。这是一个列向量。就像这样。现在，让我们旋转坐标系。称之为X'。我已经处理了IJK。我旋转了坐标系。我将称之为I'、J'、K'。)
+
+$[i\ j\ k]=X$，则有 $Xr=xi+yj+zk$；$[i'\ j'\ k']=X'$，有 $X'r'=x'i'+y'j'+z'k'$
+
+And I write this as a row matrix, X prime. Now, X prime, R prime is equal to X prime, I prime, plus Y prime, J prime, plus Z prime, K prime. And so this is the coordinate. This describes the point. This describes the same point. So therefore, they have to be the same. So X prime, R prime is equal to XR. That means the relationship between X prime and X and also the relationship between R prime and R are linear. So I was a column is equal to a matrix which has a gamma times R. This gamma is a is a three by three matrix.(我将其写成行矩阵X'。现在，X'R'等于X'I'加Y'J'加Z'K'。这就是坐标。这描述了点。这描述的是同一个点。因此，它们必须相同。所以X'R'等于XR。*这意味着X'与X之间的关系以及R'与R之间的关系是线性的*。因此，列等于一个包含 γ 乘以R的矩阵。这个 γ 是一个3×3的矩阵。)
+
+由于描述的是同一个点，所以有：$X'r'=Xr$
+
+And this is this is all this is all fine. I'm not going to erase this. It's especially if we do it the other way. X prime is equal to I prime, J prime, K prime. Now, I prime is a linear combination of IJK and J prime. J prime is the new y-axis. It's a linear combination of the i, j, k. K prime is a linear combination of i, j, k. So therefore, x prime is equal to x times the matrix gamma. This is a row. This is a row.This is a column. (这一切都很好。我不会删除这个。尤其是如果我们用另一种方式来做的话。X'等于I'、J'、K'。现在，I'是IJK的线性组合。J'是新的 y 轴。它是i、j、k的线性组合。K' 也是 i、j、k 的线性组合。因此，X' 等于X乘以矩阵gamma。这是一行。这是一行。这是一个列。)
+$$X'=X \Gamma$$
+
+There are nine elements of gamma. Each element is the coefficient in the expression of i prime or j prime or k prime in terms of i, j, k. If I substitute that into here, I get gamma. Therefore, if I multiply this by the inverse, how do I know that gamma has an inverse? I'll come to that in one minute. If I multiply both sides by gamma inverse, I get r prime equal to gamma inverse r. We couldn't define gamma inverse by this formula. In other words, r prime is x prime, y prime, z prime.(γ有九个元素。每个元素都是 i'、j' 或 k' 在 i、j、k 坐标系中的表达式系数。如果我将这些代入这里，就能得到 γ。因此，如果我用逆矩阵乘以这个，我怎么知道 γ 有逆矩阵呢？我稍后会讲到这一点。如果我将两边都乘以 γ 的逆矩阵，就得到 r' 等于 γ 逆乘以 r。我们不能用这个公式来定义 γ 的逆矩阵。换句话说，r' 就是 x'、y'、z'。)
+
+$$X \Gamma r' = Xr  \quad \to \quad \Gamma r'=r \quad \text{and} \quad r'=\Gamma^{-1}r$$
+
+x prime, y prime, z prime are linear combinations of x, y, z. And so it has the nine coefficients, and the nine coefficients is gamma inverse. Now, we know that r prime, that by definition is x prime squared plus y prime squared plus z prime squared. And that's clearly equal to x squared plus y squared plus z squared, because that's the distance squared from the origin.(x'、y'、z'是x、y、z的线性组合。因此它有九个系数，而这九个系数就是 γ 的逆矩阵。现在，我们知道 $\tilde{r'}r'$ 的定义是 x' 的平方加上 y' 的平方加上 z' 的平方。这显然等于 x 的平方加上 y 的平方加上 z 的平方，因为这是到原点的距离的平方。)
+
+$$\tilde{r'}r'=x'^2+y'^2+z^2=x^2+y^2+z^2=\tilde{r}r$$
+
+So this is equal to r. Now, I plug that formula in. Therefore, this side. Now, when you take a wiggle of A, B, does anybody know how to take? A is a matrix. This is more general than what we just looked at. Suppose I have, when you multiply two matrices together, A and B, they can both be rectangular of whatever size, but there's one thing that must match. Namely, the width of the first one must be equal to the height of the second one.(所以这等于r。现在，我把这个公式代入。因此，这一边。现在，当你对A、B进行微调时，有人知道怎么做吗？A 是一个矩阵。这比我们刚才看的更普遍。假设我有，当你把两个矩阵 A 和 B 相乘时，它们可以是任意大小的矩形，但有一点必须匹配。即第一个矩阵的宽度必须等于第二个矩阵的高度。)
+
+Otherwise, you cannot multiply them. Because when you multiply, you always take, let's say there are three elements here. Let's call them alpha, beta, gamma. And this is A, B, C. There is alpha A plus beta B plus gamma C. So this width must be equal to this height. But after you multiply it, otherwise there's no restriction. And the result of this has the height of this one and the width of this one.(否则，你就无法将它们相乘。因为在乘法运算中，总是需要对应元素相乘。假设这里有三个元素，我们称之为 α、β、γ。而这边是A、B、C。运算结果就是αA + βB + γC。所以这个矩阵的宽度必须等于那个矩阵的高度。否则就无法进行乘法运算。最终结果的矩阵会继承第一个矩阵的高度和第二个矩阵的宽度。)
+
+When you multiply A and B, the final result has a height, which is the height of A, has a width, which is the width of B. And there's a formula of A, when you turn it into a tilde, the theorem is that this is a trivial theorem. It's equal to B tilde times A tilde. But you have to, you have to write the order differently.(当你将A和B相乘时，最终结果的高度等于A的高度，宽度等于B的宽度。关于A的公式，当你将其转换为波浪符号时，定理表明这是一个平凡定理。它等于B的波浪符号乘以A的波浪符号。但你必须以不同的顺序书写。)
+$$\tilde{AB}=\tilde{B} \tilde{A}$$
+
 Does everybody know this theorem? Okay. So this becomes R tilde, gamma inverse tilde, gamma inverse R is equal to R, R. Now let's look at this. Both sides are R and R at the end.
-And there's something in the middle. This is a three by three matrix. So this is, this is, and this is nothing but the X squared plus Y squared plus Z squared.
-And here is X, Y, Z. Here is X, Y, Z. And if you think about it for a few minutes, you immediately know that this has to be equal to one. So the conclusion is that one is one, one, one. You think of this, this one, if I sandwich it between R tilde and R, I get exactly X squared plus Y squared plus Z squared.
-You may object. You say that it does not yet follow from here that that is equal to one. Because what happens if these two elements are equal and opposite? If these two elements are equal and opposite, this formula still holds.
-But you know that this is a symmetrical matrix. How do I know it's a symmetrical? I tell it. There's a footnote.
-The tilde of this, by this rule, is equal to, the tilde of the tilde is equal to itself. Because we tell it twice. So that means this thing, after we tell it, it comes back to itself.
-So that means that the matrix is symmetrical. If it's a symmetrical matrix, you cannot have these two opposite. So therefore, we have this.
-This is a footnote to prevent the objection that maybe it's a one here and minus one here. You can't be because it has to be a symmetric matrix. So that's the most important statement.
-If a matrix is equal to one, its inverse is also equal to one, so I can take the inverse. When you take the inverse, the inverse of AB is equal to the inverse of B times the inverse of A, again reversed order. So if I take the inverse of this, I get gamma and gamma tilde is equal to one.
-So such a matrix is called an orthogonal matrix. Furthermore, the determinant of gamma is one.
+And there's something in the middle. This is a three by three matrix. So this is, this is, and this is nothing but the X squared plus Y squared plus Z squared.(大家都知道这个定理吗？好的。那么这就变成了R波浪号，γ逆波浪号，γ逆R等于R，R。现在我们来看这个。两边最后都是R和R。中间还有东西。这是一个3×3的矩阵。所以这就是，这就是，而这不过是X平方加Y平方加Z平方。)
 
-接下来转录 W000
+因为有 $r'=\Gamma^{-1}r$，所以 $\tilde{r'}=\tilde{r} \tilde{\Gamma^{-1}}$
+
+所以可得：$$\tilde{r'}r'=\tilde{r}\tilde{\Gamma^{-1}} \Gamma^{-1}r$$
+在上文中，我们有：$$\tilde{r'}r'=x'^2+y'^2+z^2=x^2+y^2+z^2=\tilde{r}r$$所以，可得$$\tilde{r'}r'=\tilde{r}\tilde{\Gamma^{-1}} \Gamma^{-1}r=\tilde{r}r$$这意味着$$\tilde{\Gamma^{-1}} \Gamma^{-1}=I$$
+And here is X, Y, Z. Here is X, Y, Z. And if you think about it for a few minutes, you immediately know that this has to be equal to one. So the conclusion is that one is one, one, one. You think of this, this one, if I sandwich it between R tilde and R, I get exactly X squared plus Y squared plus Z squared.(这里是X、Y、Z。这是X、Y、Z。如果你思考几分钟，马上就能明白这必须等于一。所以结论就是一就是一、一、一。你想想这个一，如果我把它夹在R波浪线和R之间，正好得到X平方加Y平方加Z平方。)
+
+You may object. You say that it does not yet follow from here that that is equal to one. Because what happens if these two elements are equal and opposite? If these two elements are equal and opposite, this formula still holds. But you know that this is a symmetrical matrix. How do I know it's a symmetrical? I tell it. There's a footnote.(你可能会反对。你会说，从这里还不能得出那个等于一的结论。因为如果这两个元素相等且相反会怎样呢？如果这两个元素相等且相反，这个公式仍然成立。但你知道这是一个对称矩阵。我怎么知道它是对称的？我告诉你。有一个脚注。)
+
+根据：$$\tilde{\Gamma^{-1}} \Gamma^{-1}=I$$进行转置有：$$\tilde{\Gamma^{-1}}\Gamma^{-1}=I$$
+The tilde of this, by this rule, is equal to, the tilde of the tilde is equal to itself. Because we tell it twice. So that means this thing, after we tell it, it comes back to itself. So that means that the matrix is symmetrical. If it's a symmetrical matrix, you cannot have these two opposite. So therefore, we have this. This is a footnote to prevent the objection that maybe it's a one here and minus one here. You can't be because it has to be a symmetric matrix. So that's the most important statement.(根据这个规则，这个波浪线等于，波浪线的波浪线等于它本身。因为我们说了两次。所以这意味着这个东西，在我们说完之后，它又回到了它本身。所以这意味着这个矩阵是对称的。如果它是一个对称矩阵，你就不能有这两个相反的东西。因此，我们有了这个。这是一个脚注，以防止有人反对说可能这里是一个1，这里是一个-1。你不能这样，因为它必须是一个对称矩阵。所以这是最重要的陈述。)
+
+If a matrix is equal to one, its inverse is also equal to one, so I can take the inverse. When you take the inverse, the inverse of AB is equal to the inverse of B times the inverse of A, again reversed order. So if I take the inverse of this, I get gamma and gamma tilde is equal to one. So such a matrix is called an orthogonal matrix. Furthermore, the determinant of gamma is one.(如果一个矩阵等于1，它的逆矩阵也等于1，因此我可以取逆。当你取逆时，AB的逆等于B的逆乘以A的逆，顺序再次颠倒。所以如果我取这个的逆，我得到γ和γ波浪号等于1。因此这样的矩阵被称为正交矩阵。此外，γ的行列式为1。)
+
+根据：$$\tilde{\Gamma^{-1}}\Gamma^{-1}=I$$取逆，有：$$\Gamma\tilde{\Gamma}=I$$即，$\tilde{\Gamma}=\Gamma^{-1}$，这意味着 $\Gamma$ 是个正交矩阵。其行列式值为 1
+
+How do I know that? First, I take the critical case of no motion. Then x prime is equal to x, y prime is equal to y, z prime is equal to z. So, we go back to this formula. If it is no motion, then r prime is equal to r. So, gamma is the unit matrix.（我怎么知道这一点呢？首先，我考虑没有运动的临界情况。那么 x' 等于 x，y' 等于 y，z' 等于 z。于是，我们回到这个公式。如果没有运动，那么 r' 等于 r。因此，γ 就是单位矩阵。）
+
+Gamma is 1, 1, 1. The determinant of the unit matrix is, of course, 1. Now, I make a slight motion. Because of this, I have the determinant of gamma times the determinant of gamma tilde is equal to 1. But the determinant of gamma tilde is equal to the determinant. Because if you have a matrix, if you have a determinant, if you turn it around for the determinant, if you change the rows and the columns, the determinant is not changed.（伽马值为1, 1, 1。单位矩阵的行列式当然也是1。现在，我做一个微小的变动。因此，我得到了伽马的行列式乘以伽马波浪号的行列式等于 1。但伽马波浪号的行列式等于原行列式。因为对于一个矩阵来说，如果你有一个行列式，当你对行列式进行转置时——即交换行和列——行列式的值并不会改变。）
+
+So, that means the determinant of gamma squared is equal to 1. So, the determinant of gamma is always plus 1 or minus 1. Now, to start with, no motion at all. Gamma is equal to 1, so its determinant is 1. Now, I consider a slight change in the motion. The determinant of gamma cannot suddenly change from 1 to minus 1. So, if I continuously move, change the rotation, the determinant cannot suddenly change from 1 to minus 1. So, the determinant remains 1. （因此，这意味着伽马平方的行列式等于1。所以，伽马的行列式总是+1或-1。现在，从完全没有运动开始。伽马等于1，所以它的行列式是1。现在，我考虑运动的一个微小变化。伽马的行列式不能突然从1变为-1。所以，如果我连续移动，改变旋转，行列式不能突然从1变为-1。因此，行列式保持为1。）
+
+And that's why I wrote this determinant is equal to 1. This is a topological proof.And in the mathematics of the 20th century, topology gets married to geometry, to algebra. And what we have shown is just a typical example of that. So, the net result, we have the following.We now have a 3 by 3 real matrix, which is orthogonal in the sense that gamma, gamma tilde is equal to 1. And furthermore, its determinant is 1. That's called an element of it. So, mathematically now, one says gamma is an element of $SO_3$. O means orthogonal.3 means 3-dimension. 3-dimensional orthogonal matrix. An orthogonal matrix is one that satisfies this condition.（这就是为什么我写这个行列式等于1。这是一个拓扑证明。在 20 世纪的数学中，拓扑学与几何学、代数学紧密结合。而我们展示的正是这种结合的典型例子。最终，我们得到以下结论。现在我们有一个 3×3 的实数矩阵，它在 γ 乘以 γ 的转置等于 1 的意义上是正交的。此外，它的行列式为 1。这样的矩阵被称为 $SO_3$ 的元素。数学上现在可以说 γ 属于 $SO_3$ 群。O 代表正交（orthogonal），3 代表三维。这是一个三维正交矩阵。正交矩阵就是满足这个条件的矩阵。）
+
+The S says special. Special means that its determinant is plus 1. So, the rotation gamma algebraically is an element of SO3. Much of 20th century mathematics consists of generalizations of this. You can go to SO4. You can go to SO5. You can go to SON.You can also generalize it so that it's an orthogonal matrix, but it's not necessarily real. So, it becomes a complex orthogonal matrix. And such things, in some sense, is one of the main structures of 20th century mathematics.(S代表特殊（special）。特殊意味着其行列式为 +1。因此，从代数角度看，*旋转 γ 是 SO3 的一个元素*。20 世纪数学的很大一部分内容就是对这一概念的推广。你可以推广到 SO4，可以推广到 SO5，甚至可以推广到 SON。你还可以将其推广为正交矩阵，但不一定是实数矩阵，于是就变成了复正交矩阵。从某种意义上说，这类概念构成了 20 世纪数学的主要结构之一。)
+
+And what we now find is that all those structures are deeply related to the structure of elementary particles. So, we'll come to that in the future. If any of you found that what I discussed today is a little bit too complicated, please come to talk to me this afternoon. I think if nobody comes, then it's better because we can go faster. But if many people come, then we'll have to discuss what to do. Okay. Bye-bye. Good luck. (我们现在发现，所有这些结构都与基本粒子的结构密切相关。所以，我们将来会讲到这一点。如果你们中有人觉得我今天讲的内容有点太复杂了，请今天下午来找我谈谈。我想如果没人来，那就更好了，因为我们可以讲得更快。但如果有很多人来，那我们就得讨论该怎么办。好了，再见。祝你们好运)
+
+
