--- a/数学物理方法/一、向量分析.md
+++ b/数学物理方法/一、向量分析.md
@@ -66,4 +66,40 @@
 
 在我们特定的情况下，我们假设空间是各向同性的；也就是说，不存在优先方向，或者说所有方向都是等效的。因此，被分析的物理系统或被阐述的物理定律不能也不应依赖于我们对坐标轴方向的选择。具体来说，如果一个量 $S$ 不依赖于坐标轴的取向，它就被称为标量。
 
+现在我们回到向量 $\boldsymbol{r}$ 作为独立于坐标系的几何对象的概念。让我们在两个不同的系统中观察 $\boldsymbol{r}$，其中一个相对于另一个旋转。
+
+为简化问题，我们首先考虑二维情况。若将 $x$、$y$ 坐标轴绕原点逆时针旋转角度 $\varphi$（**保持 $\boldsymbol{r}$ 不变**，如图 1.6 所示），则在原坐标系（未标记）和新旋转坐标系（标记 '）中分量之间存在以下关系：$$\begin{align}
+x^{\prime}&=x\cos\varphi+y\sin\varphi, \\[1.2ex]
+y^{\prime}&=-x\sin\varphi+y\cos\varphi. 
+\end{align}\tag{1.8}$$
+我们在第 1.1 节中看到，向量可以用点的坐标来表示；也就是说，坐标与向量的分量成比例。因此，向量的分量在旋转下必须像点的坐标（如 $\boldsymbol{r}$）那样变换。因此，每当 $xy$ 坐标系中的任意一对量 $A_x$ 和 $A_y$ 通过坐标系的这种旋转被变换为 $(A'_x, A'_y)$ 时，$$\begin{align}
+A_{x}^{\prime}&=A_{x}\cos\varphi+A_{y}\sin\varphi, \\[1.2ex]
+A_{y}^{\prime}&=-A_{x}\sin\varphi+A_{y}\cos\varphi. 
+\end{align}\tag{1.9}$$
+我们将 $A_x$ 和 $A_y$ **定义**为一个向量 $\boldsymbol{A}$ 的分量。现在，我们的向量是根据其分量在坐标系旋转下的变换来定义的。如果 $A_x$ 和 $A_y$ 的变换方式与一般二维坐标向量 $\boldsymbol{r}$ 的分量 $x$ 和 $y$ 相同，那么它们就是向量 $\boldsymbol{A}$ 的分量。如果在坐标旋转时，$A_x$ 和 $A_y$ 不表现出这种形式不变性（也称为协变性），那么它们就不构成一个向量。
+
+满足定义方程（式 1.9）的矢量场分量 $A_x$ 和 $A_y$，为空间中的每个点关联了一个大小 $A$ 和一个方向。大小是一个标量，不随坐标系旋转而改变。方向（相对于未旋转坐标系）同样不随坐标系旋转而变化（参见习题 1.2.1）。这一切的结果是，矢量的分量可能随着旋转后的坐标系而变化。这正是式（1.9）所表达的。但这种随角度的变化方式，恰好使得旋转坐标系中的分量 $A_x'$和 $A_y'$ 定义的矢量，与由相对于 $x$、$y$ 坐标轴的分量 $A_x$ 和 $A_y$ 定义的矢量具有相同的大小和方向。（对比习题1.2.1。）$\boldsymbol{A}$ 在特定坐标系中的分量构成了 $\boldsymbol{A}$ 在该坐标系中的表示。式（1.9）——这些变换关系——保证了实体 $\boldsymbol{A}$ 与坐标系的旋转无关。
+
+为了继续探讨三维乃至四维空间，我们发现使用更简洁的符号表示法更为便利。令 $$
+\begin{align}
+x \to x_{1}, \quad &\quad y \to x_{2} \tag{1.10}\\ 
+a_{11}=\cos \varphi, \quad &\quad a_{12}=\sin \varphi \\
+a_{21}=-\sin \varphi, \quad &\quad a_{22}=\cos \varphi \tag{1.11}
+\end{align}
+$$
+公式 (1.8) 变为$$\begin{align}
+x_{1}^{\prime}&=a_{11}x_{1}+a_{12}x_{2}, \\[1.2ex]
+x_{2}^{\prime}&=a_{21}x_{1}+a_{22}x_{2}. 
+\end{align}\tag{1.12}$$
+系数 $a_{ij}$ 可以解释为方向余弦，即 $x_i'$ 和 $x_j$ 之间夹角的余弦；也就是说，$$\begin{align}
+a_{12}&=\cos\left(x_{1}^{\prime}, x_{2}\right)=\sin\varphi, \\[1.2ex]
+a_{21}&=\cos\left(x_{2}^{\prime}, x_{1}\right)=\cos\left(\varphi+\frac{\pi}{2}\right)=-\sin\varphi.
+\end{align}\tag{1.13}$$新符号的优势在于它允许我们使用求和符号 $\sum$，并将方程（1.12）改写为$$x_{i}^{\prime}=\sum_{j=1}^{2}a_{ij}x_{j},\quad i=1,2. \tag{1.14}$$请注意，$i$ 作为一个参数，当它等于 1 时会产生一个方程，当它等于 2 时会产生第二个方程。当然，索引 $j$ 是一个求和索引，一个哑索引，就像积分变量一样，$j$ 可以用任何其他方便的符号代替。
+
+
+
+
+
+
+
 \boldsymbol{A}
