--- a/理论物理/朗道/一、力学/第 1 章、运动方程.md
+++ b/理论物理/朗道/一、力学/第 1 章、运动方程.md
@@ -192,7 +192,7 @@ L' = L + \frac{\mathrm{d}}{\mathrm{d}t} \left( 2 \frac{m}{2} \mathbf{r} \cdot \m
 > | $\mathrm{d}(l^2)$ | $2l\,\mathrm{d}l$                    | 明确的一阶微分操作                                        | 与$\mathrm{d}l^2$等同   |
 > | $(\mathrm{d}l)^2$ | $(\mathrm{d}l)^2$                    | 微分的平方（二阶小量）                                      | 与前两者不同               |
 > | $\mathrm{d}^2l$   | $\mathrm{d}(\mathrm{d}l)$            | 二阶微分或加速度（如$\frac{\mathrm{d}^2l}{\mathrm{d}t^2}$） | 与前三者完全不同             |
-> 同样，下文中 $\mathrm{d}l^2=\mathrm{d}x^2+\mathrm{d}y^2+\mathrm{d}z^2$，正确写法应为 $(\mathrm{d}l)^2=(\mathrm{d}x)^2+(\mathrm{d}y)^2+(\mathrm{d}z)^2$
+> 同样，下文中 $\mathrm{d}l^2=\mathrm{d}x^2+\mathrm{d}y^2+\mathrm{d}z^2$ 等内容中，正确写法应为 $(\mathrm{d}l)^2=(\mathrm{d}x)^2+(\mathrm{d}y)^2+(\mathrm{d}z)^2$
 > 
 > 
 
