--- a/数学物理方法/一、向量分析.md
+++ b/数学物理方法/一、向量分析.md
@@ -46,9 +46,22 @@
 答：相加除 2 可得 $\boldsymbol{A}$，相减除 2 可得 $\boldsymbol{B}$
 
 
-**1.1.2** 向量 $\boldsymbol{A}$ 的大小为 1.732 个单位，与坐标轴成相等的角度。求 $A_x$、$A_y$ 和 $A_z$。
+**1.1.2**  向量 $\boldsymbol{A}$ 的大小为 1.732 个单位，与坐标轴成相等的角度。求 $A_x$、$A_y$ 和 $A_z$。
 
 根据 $\cos^2\alpha + \cos^2\beta + \cos^2\gamma = 1$ 其角度都相等，可得 $\cos\alpha=\frac{\sqrt{ 3 }}{3}$，根据公式 (1.4) 可得均为 1
+
+**1.1.3**  计算一个位于 $xy$ 平面内、与 $x$ 轴和 $y$ 轴正方向夹角相等的单位向量的分量。$\left( \frac{\sqrt{ 2 }\pi}{2}, 0 \right)$，$\left( 0, \frac{\sqrt{ 2 }\pi}{2}\right)$
+
+**1.1.4**  帆船 $A$ 相对于帆船 $B$ 的速度，$\boldsymbol{v}_\text{rel}$，由方程 $\boldsymbol{v}_{\text{rel}}=\boldsymbol{v}_{A}-\boldsymbol{v}_{B}$ 定义，其中 $\boldsymbol{v}_{A}$ 是 $A$ 的速度，$\boldsymbol{v}_{B}$ 是 $B$ 的速度。确定 $A$ 相对于 $B$ 的速度，如果$$\begin{align}
+\boldsymbol{v}_{A} &= 30 \text{ km/hr east} \\
+\boldsymbol{v}_{B} &= 40 \text{ km/hr north}
+\end{align}$$
+**答：** 向量相减，大小是 50 km/hr，方向是 53.1° 东偏南方向
+
+**1.1.5**  一艘帆船以每小时 4 公里（相对于水面）的速度沿罗盘方位北偏东 40° 稳定航行了 1 小时。与此同时，帆船还被洋流推动。1 小时后，帆船距离起点 6.12 公里，起点与当前位置的连线位于北偏东 60° 方向。求洋流速度的东向 $x$ 和北向 $y$ 分量。
+
+答：在 $y$ 分量上，$4\cos 40° \approx 6.12 \cos 60°$，这意味这 $y$ 分量基本为 0，$x$ 分量大小为 $6.12 \sin 60°-4 \sin 40°=2.73$
+
 
 
 ## 1.2 坐标轴的旋转
