--- a/理论物理/朗道/一、力学/第 1 章、运动方程.md
+++ b/理论物理/朗道/一、力学/第 1 章、运动方程.md
@@ -213,15 +213,33 @@ L' = L + \frac{\mathrm{d}}{\mathrm{d}t} \left( 2 \frac{m}{2} \mathbf{r} \cdot \m
 
 势能仅依赖于所有质点在同一时刻的位置，这意味着其中任何质点位置的改变立刻影响到所有其它质点，可以说相互作用瞬间传递。这个相互作用的性质在经典力学中是必然的，它紧密联系着经典力学的基本前提，即绝对时间假设和伽利略相对性原理。如果相互作用不是瞬间传递的，即以一个有限速度传递，而时间的绝对性意味着通常的速度相加法则适用于所有现象，因此在有相对运动的不同参考系中传递速度不相同。于是相互作用的物体的运动规律在不同惯性参考系中也不相同，这就违背了伽利略相对性原理。
 
-在 $§3$ 中我们只提到了时间的均匀性，拉格朗日函数的形式 (5.1) 表明，时间不仅是均匀的，而且是各向同性的，即时间的性质在两个方向上都是相同的，事实上，**用 $-t$ 代替 $t$ 不会改变拉格朗日函数，进而也不会改变运动方程**。换句话说，如果在参考系中某种运动是可能的，则逆运动也是可能的，即可以按照相反的顺序经历前述运动中相同的状态。在这个意义下，遵循经典力学定律的所有运动都是可逆的。
+在 $§3$ 中我们只提到了时间的均匀性，拉格朗日函数的形式 (5.1) 表明，时间不仅是均匀的，而且是各向同性的，即时间的性质在两个方向上都是相同的，事实上，<font color="blue">用 -t 代替 t 不会改变拉格朗日函数，进而也不会改变运动方程</font>。换句话说，如果在参考系中某种运动是可能的，则逆运动也是可能的，即可以按照相反的顺序经历前述运动中相同的状态。在这个意义下，遵循经典力学定律的所有运动都是可逆的。
 
-知道拉格朗日函数后就可以建立运动方程：$$\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\boldsymbol{v}_a}=\frac{\partial L}{\partial\boldsymbol{r}_a}. \tag{5.2}$$将（5.1）代入后得：$$m_a\frac{\operatorname{d}\boldsymbol{v}_a}{\operatorname{d}t}=-\frac{\partial U}{\partial\boldsymbol{r}_a}. \tag{5.3}$$这种形式的运动方程称为 *牛顿方程* ，是相互作用质点系力学的基础。方程（5.3）右端的矢量$$\boldsymbol{F}_a=-\frac{\partial U}{\partial \boldsymbol{r}_a} \tag{5.4}$$称为作用在第 $a$ 个质点上的力。它与 $U$ 一样，只依赖于所有质点的坐标，而不依赖于速度。因此，方程（5.3）表明，质点的加速度矢量也只是坐标的函数。
+> [!tip]
+> 在动能项中，时间反转，则速度反向，但 $v^2$ 不变，势能项不显含时间，也不依赖速度，也不变。
+
+知道拉格朗日函数后就可以建立运动方程：$$\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\boldsymbol{v}_a}=\frac{\partial L}{\partial\boldsymbol{r}_a}. \tag{5.2}$$将（5.1）代入后得：$$m_a\frac{\operatorname{d}\boldsymbol{v}_a}{\operatorname{d}t}=-\frac{\partial U}{\partial\boldsymbol{r}_a}. \tag{5.3}$$这种形式的运动方程称为 *牛顿方程* ，是相互作用质点系力学的基础。方程（5.3）右端的矢量$$\boldsymbol{F}_a=-\frac{\partial U}{\partial \boldsymbol{r}_a} \tag{5.4}$$称为作用在第 $a$ 个质点上的力。它与 $U$ 一样，只依赖于所有质点的坐标，而不依赖于速度。因此，<font color="blue">方程（5.3）表明，质点的加速度矢量也只是坐标的函数。</font>
 
 势能可以增减任意常数而不改变运动方程(这是在 $§2$ 末讲到的拉格朗日函数不确定性的特殊情况)。选择这个任意常数的最自然和最通用的方法是，当无限增大质点间距离时势能趋向于零。
 
+> [!tip]
+> 如果给势能 $U$ 加上一个常数 $C$，变为 $U'=U+C$，则新的拉格朗日函数为 $L'=T−(U+C)=L−C$。由于常数 $C$ 对时间的全导数为零（$\frac{\mathrm{d}C}{\mathrm{d}t}​=0$），因此 $L'$ 与 $L$ 只相差一个常数。根据上述不确定性原理，​这个常数 $C$ 的增减不会影响运动方程。
+
 如果描述运动不是用笛卡儿坐标，而是用任意的广义坐标 $q_i$，则为了得到新的拉格朗日函数必须进行相应的变换：$$x_a=f_a(q_1,q_2,\cdotp\cdotp\cdotp,q_s),\quad\dot{x}_a=\sum_k\frac{\partial f_a}{\partial q_k}\dot{q}_k,\quad\cdotp\cdotp\cdotp,$$将这些表达式带入函数$$L=\frac{1}{2}\sum_am_a(\dot{x}_a^2+\dot{y}_a^2+\dot{z}_a^2)-U,$$可得如下形式的拉格朗日函数：$$L=\frac{1}{2}\sum_{i,k}a_{ik}(q)\dot{q}_i\dot{q}_k-U(q),\tag{5.5}$$其中 $a_{ik}$ 只是广义坐标的函数。用广义坐标写出的动能仍是速度的二次函数，但也可以依赖于广义坐标。
 
+> [!tip]
+> 速度是坐标对时间的一阶导数。根据链式法则，笛卡尔坐标系下的速度可以通过广义坐标和广义速度表示。例如，$x_a$ 方向的速度为：$$
+> \dot{x}_a = \frac{\mathrm{d} x_a}{\mathrm{d} t} = \frac{\mathrm{d}}{\mathrm{d} t} f_a(q_1, \dots, q_s) = \sum_{k=1}^s \frac{\partial f_a}{\partial q_k} \dot{q}_k$$同理可得 $\dot{y}_a$ 和 $\dot{z}_a$。这样，每个质点的速度平方和可以写为：$$
+> \dot{x}_a^2 + \dot{y}_a^2 + \dot{z}_a^2 = \sum_{i=1}^s \sum_{k=1}^s \left( \frac{\partial x_a}{\partial q_i} \frac{\partial x_a}{\partial q_k} + \frac{\partial y_a}{\partial q_i} \frac{\partial y_a}{\partial q_k} + \frac{\partial z_a}{\partial q_i} \frac{\partial z_a}{\partial q_k} \right) \dot{q}_i \dot{q}_k$$系统的总动能 $T = \frac{1}{2}\sum_a m_a (\dot{x}_a^2 + \dot{y}_a^2 + \dot{z}_a^2)$ 因此变为：$$
+> T = \frac{1}{2} \sum_a m_a \left[ \sum_{i=1}^s \sum_{k=1}^s \left( \frac{\partial x_a}{\partial q_i} \frac{\partial x_a}{\partial q_k} + \frac{\partial y_a}{\partial q_i} \frac{\partial y_a}{\partial q_k} + \frac{\partial z_a}{\partial q_i} \frac{\partial z_a}{\partial q_k} \right) \dot{q}_i \dot{q}_k \right]$$交换求和顺序，将常数因子提出来，我们得到：$$
+> T = \frac{1}{2} \sum_{i=1}^s \sum_{k=1}^s \left[ \sum_a m_a \left( \frac{\partial x_a}{\partial q_i} \frac{\partial x_a}{\partial q_k} + \frac{\partial y_a}{\partial q_i} \frac{\partial y_a}{\partial q_k} + \frac{\partial z_a}{\partial q_i} \frac{\partial z_a}{\partial q_k} \right) \right] \dot{q}_i \dot{q}_k$$
+> 令括号内的表达式为 $a_{ik}(q)$：$$
+> a_{ik}(q) = \sum_a m_a \left( \frac{\partial x_a}{\partial q_i} \frac{\partial x_a}{\partial q_k} + \frac{\partial y_a}{\partial q_i} \frac{\partial y_a}{\partial q_k} + \frac{\partial z_a}{\partial q_i} \frac{\partial z_a}{\partial q_k} \right)$$
+
 到此为止我们只研究了封闭质点系。下面研究非封闭质点系 $A$，它与运动完全已知的质点系 $B$ 相互作用。这种情况下称 $A$ 在（由 $B$ 产生的）给定的外场中运动，根据最小作用量原理推导运动方程是要对每个广义坐标进行独立变分（即把其余坐标看作好像是已知的），因此，可将质点系 $A+B$ 的拉格朗日函数 $L$ 中广义坐标 $q_B$ 用给定的时间函数代替，由此得到质点系 $A$ 的拉格朗日函数 $L_A$。
+
+> [!tip]
+> 当说系统 $B$ 的运动“完全已知”时，意味着在数学上，我们已经找到了它的广义坐标随时间变化的解析表达式，即 $q_B​=q_B​(t)$。这个函数 $q_B​(t)$是确定的，它本身就是系统 $B$ 的运动方程的解。简单来说，这是一种“降维”处理：我们将一个复杂的两体相互作用问题，通过固定其中一个物体的已知运动，简化成了一个单体在给定场中运动的问题。同理，广义速度 $\dot{q}_{B}=\dot{q}_{B}(t)$，即下文提到的，$T_B(q_B, \dot{q}_B)$ 是只依赖于时间的函数。
 
 假设质点系 $A+B$ 是封闭的，则有 $$L=T_A(q_A,\dot{q}_A)+T_B(q_B,\dot{q}_B)-U(q_A,q_B),$$其中前两项分别是系统 $A$ 和 $B$ 的动能，第三项是 $A+B$ 的势能。将广义坐标 $q_B$ 用已知的时间函数代替后，$T_B(q_B, \dot{q}_B)$ 是只依赖于时间的函数（因此也是某个时间函数的全导数），可以从 $L$ 中略去。于是$$L_A=T_A(q_A,\dot{q}_A)-U(q_A,q_B(t)).$$
 可见，在外场中的质点系的运动由通常形式的拉格朗日函数描述，仅有的差别就在于势能可能显含时间。
@@ -242,7 +260,7 @@ L' = L + \frac{\mathrm{d}}{\mathrm{d}t} \left( 2 \frac{m}{2} \mathbf{r} \cdot \m
 
 **习题 1**：平面双摆（图 1）
 
-![[Pasted image 20250226142505.png|200]]
+![[习题1.png]]
 
 **解：** 取绳 $l_1$ 和 $l_2$ 分别与竖直方向的夹角 $\varphi_1$ 和 $\varphi_2$ 为广义坐标，对质点 $m_1$ 有：$$T_1 = \frac{1}{2}m_1l_1^2\dot{\varphi_1}^2, \quad U_1 = -m_1gl_1\cos\varphi_1$$
 为了求出第二个质点的动能，我们用角 $\varphi_1$ 和 $\varphi_2$ 表示第二个质点的笛卡尔坐标 $x_2, y_2$（坐标原点取在悬挂点，$y$ 轴竖直向下）：$$
@@ -255,7 +273,7 @@ U_2 &= -m_2 g (y_1 + y_2) = -m_2 g (l_1 \cos \varphi_1 + l_2 \cos \varphi_2).
 
 **习题 2：** 质量为 $m_2$ 的平面摆，其悬挂点（质量为 $m_1$）可以沿着位于 $m_2$ 运动平面内的水平直线运动（图 2）
 
-![[Pasted image 20250304095524.png|240]]
+![[习题2.png]]
 **解：** 设质点 $m_1$ 的坐标为 $x$，绳与竖直方向的夹角为 $\varphi$，则有：
 
 $v_1=\dot{x}$，$v_2=l\dot{\varphi}$，然后将 $v_2$ 分解成水平和竖直两部分，水平分量为 $l\dot{\varphi}\cos{\varphi}+\dot{x}$，竖直分量为 $l\dot{\varphi}\sin{\varphi}$
