--- a/数学物理方法/一、向量分析.md
+++ b/数学物理方法/一、向量分析.md
@@ -62,6 +62,19 @@
 
 答：在 $y$ 分量上，$4\cos 40° \approx 6.12 \cos 60°$，这意味这 $y$ 分量基本为 0，$x$ 分量大小为 $6.12 \sin 60°-4 \sin 40°=2.73$
 
+**1.1.6**  一个向量方程可以简化为 $\boldsymbol{A} = \boldsymbol{B}$ 的形式。由此可以证明，一个向量方程等价于三个标量方程。假设牛顿第二定律 $\boldsymbol{F} = m \boldsymbol{a}$ 作为向量方程成立，这意味着 $a_x$ 仅取决于 $F_x$，而与 $F_y$ 和 $F_z$ 无关。
+
+**1.1.7** 三角形 $ABC$ 的顶点分别为点 $(−1, 0, 2)$、$(0, 1, 0)$ 和 $(1,−1, 0)$。求点 $D$ 使得图形 $ABCD$ 构成平面平行四边形。
+
+答：AC 的中间也是 BD 的中点，AC 中点（0, -1/2, 1）则 D= (0, -2, 2)，书上答案还给了个 or （2, 0, -2）是不正确的。
+
+**1.1.8** 三角形由从原点延伸出的三个向量 $\boldsymbol{A}$、$\boldsymbol{B}$ 和 $\boldsymbol{C}$ 的顶点定义。根据 $\boldsymbol{A}$、$\boldsymbol{B}$ 和 $\boldsymbol{C}$，证明三角形连续边（AB + BC + CA）的向量和为零，其中边 AB 是从 $\boldsymbol{A}$ 到 $\boldsymbol{B}$，以此类推。
+
+**1.1.9** 半径为 $a$ 的球体以点 $\boldsymbol{r}_{1}$ 为中心。
+
+(a) 写出该球体的代数方程。  $(x-x_{1})^2+(y-y_{1})^2+(z-z_{1})^2=a^2$
+(b) 写出该球体的向量方程。 $\boldsymbol{r}=\boldsymbol{r}_{1}+\boldsymbol{a}$  （$\boldsymbol{a}$ 可以指向任何方向，但具有固定的大小 a）
+
 
 
 ## 1.2 坐标轴的旋转
