--- a/理论物理/朗道/一、力学/第 1 章、运动方程.md
+++ b/理论物理/朗道/一、力学/第 1 章、运动方程.md
@@ -279,7 +279,70 @@ U_2 &= -m_2 g (y_1 + y_2) = -m_2 g (l_1 \cos \varphi_1 + l_2 \cos \varphi_2).
 $v_1=\dot{x}$，$v_2=l\dot{\varphi}$，然后将 $v_2$ 分解成水平和竖直两部分，水平分量为 $l\dot{\varphi}\cos{\varphi}+\dot{x}$，竖直分量为 $l\dot{\varphi}\sin{\varphi}$
 
 即：$$L = \frac{m_1 + m_2}{2} \dot{x}^2 + \frac{m_2}{2} \left( l^2 \dot{\varphi}^2 + 2l \dot{x} \dot{\varphi} \cos \varphi \right) + m_2 g l \cos \varphi.$$
+*这里需要注意 $v_{2}$ 的方向与 $l$ 垂直，所以 $v_{2}$ 分解水平分量的部分是 $l \dot{\varphi} \cos \varphi$，而不是 $l \dot{\varphi} \sin \varphi$*
 
+-----
 
+**习题 3：** 设有一平面摆，其悬挂点：
 
+a. 沿着竖直圆以定常圆频率 $\gamma$ 运动（图 3），
+b. 按规律 $a \cos \gamma t$ 在摆的运动平面内水平振动，
+c. 按规律 $a \cos \gamma t$ 竖直振动。
+
+![[习题3.png]]
+
+圆频率 $\gamma=\frac{2\pi}{T}=2\pi f$，$x(t)=A \cos(\omega t+\phi)$，$y(t)=A \sin(\omega t +\phi)$
+
+a. 质点 $m$ 的坐标为：$$\begin{equation}
+x = a \cos \gamma t + l \sin \varphi, \quad y = -a \sin \gamma t + l \cos \varphi.
+\end{equation}$$拉格朗日函数为：$$L = \frac{m l^{2}}{2} \dot{\varphi}^{2} + m l a \gamma^{2} \sin(\varphi - \gamma t) + m g l \cos\varphi .$$这里略去了仅仅依赖于时间的项以及可以写为 $mla \gamma \cos(\varphi- \gamma t)$ 对时间的全导数的项。
+
+推导过程如下：
+
+速度分量：$$\dot{x} = -a\gamma \sin \gamma t + l \cos \varphi \cdot \dot{\varphi},\quad\quad \dot{y} = -a\gamma \cos \gamma t - l \sin \varphi \cdot \dot{\varphi}$$
+速度分量的平方和：
+$$\dot{x}^2 = a^2\gamma^2 \sin^2 \gamma t - 2al\gamma \sin \gamma t \cos \varphi \cdot \dot{\varphi} + l^2 \cos^2 \varphi \cdot \dot{\varphi}^2$$
+$$\dot{y}^2 = a^2\gamma^2 \cos^2 \gamma t + 2al\gamma \cos \gamma t \sin \varphi \cdot \dot{\varphi} + l^2 \sin^2 \varphi \cdot \dot{\varphi}^2$$
+相加得到：
+$$\begin{align}
+\dot{x}^2 + \dot{y}^2 &= a^2\gamma^2 + l^2\dot{\varphi}^2 + 2al\gamma\dot{\varphi}(\cos \gamma t \sin \varphi - \sin \gamma t \cos \varphi)\\
+&= a^2\gamma^2 + l^2\dot{\varphi}^2 + 2al\gamma\dot{\varphi}\sin(\varphi - \gamma t)
+\end{align}$$
+动能为：
+$$T = \frac{m}{2}(a^2\gamma^2 + l^2\dot{\varphi}^2 + 2al\gamma\dot{\varphi}\sin(\varphi - \gamma t))$$
+在重力场中，取向上为正方向，势能为：
+$$V = -mgy = -mg(-a \sin \gamma t + l \cos \varphi) = mga \sin \gamma t - mgl \cos \varphi$$
+拉格朗日函数：$$L = T - V = \frac{m}{2}(a^2\gamma^2 + l^2\dot{\varphi}^2 + 2al\gamma\dot{\varphi}\sin(\varphi - \gamma t)) - (mga \sin \gamma t - mgl \cos \varphi)$$展开得：
+$$L = \frac{ma^2\gamma^2}{2} + \frac{ml^2\dot{\varphi}^2}{2} + mal\gamma\dot{\varphi}\sin(\varphi - \gamma t) - mga \sin \gamma t + mgl \cos \varphi$$
+
+处理全导数项，即 $mal\gamma\dot{\varphi}\sin(\varphi - \gamma t)$ 项。考虑函数 $f(t) = mla \gamma \cos(\varphi- \gamma t)$ 的时间导数：
+$$\frac{\mathrm{d}}{\mathrm{d}t}[mla \gamma \cos(\varphi- \gamma t)] = mla \gamma[-\sin(\varphi- \gamma t)](\dot{\varphi} - \gamma)$$
+$$= -mla \gamma \dot{\varphi}\sin(\varphi- \gamma t) + mla \gamma^2 \sin(\varphi- \gamma t)$$
+因此：$$mal\gamma\dot{\varphi}\sin(\varphi - \gamma t) = -\frac{\mathrm{d}}{\mathrm{d}t}[mla \gamma \cos(\varphi- \gamma t)] + mla \gamma^2 \sin(\varphi- \gamma t)$$
+略去仅依赖于时间的项：$\frac{ma^2\gamma^2}{2}$ 和 $mga \sin \gamma t$；再略去全导数项：$-\frac{\mathrm{d}}{\mathrm{d}t}[mla \gamma \cos(\varphi- \gamma t)]$
+
+仅依赖时间的项 $f(t)$，$\frac{\partial f(t)}{\partial \dot{q}_i} = 0$（因为 $f(t)$ 不包含 $\dot{q}_i$）$\frac{\partial f(t)}{\partial q_i} = 0$（因为 $f(t)$ 不包含 $q_i$）因此，$f(t)$ 对拉格朗日方程没有任何贡献。
+
+最终得到简化的拉格朗日函数：
+$$L = \frac{ml^2\dot{\varphi}^2}{2} + mla \gamma^2 \sin(\varphi- \gamma t) + mgl \cos \varphi$$
+
+b. 质点 $m$ 的坐标为：$$x = a \cos \gamma t + l \sin \varphi, \quad y = l \cos \varphi.$$略去全导数项后的拉格朗日函数为：$$L = \frac{m l^{2}}{2} \dot{\varphi}^{2} + m l a \gamma^{2} \cos \gamma t \sin \varphi + m g l \cos \varphi .$$
+c. 类似地，可得：$$L = \frac{m l^{2}}{2} \dot{\varphi}^{2} + m l a \gamma^{2} \cos \gamma t \cos \varphi + m g l \cos \varphi .$$
+**习题 4**： 在图 4 所示的力学系统中，质点 $m_{2}$ 沿着竖直轴运动，整个系统以常角速度 $\Omega$ 绕该轴转动。
+
+![[习题4.png]]
+
+解：设线段 $a$ 与竖直方向夹角为 $\theta$，系统绕竖直轴转动的角度为 $\varphi$，则 $\dot{\varphi}=\Omega$。对于每个质点 $m_{1}$ 的微小位移有：$$\mathrm{d}l_{1}^{2}=a^{2}\mathrm{~d}\theta^{2}+a^{2}\sin^{2}\theta\mathrm{d}\varphi^{2}.$$质点 $m_2$ 到悬挂点 $A$ 的距离为 $2a \cos\theta$，因此$$\mathrm{d}l_{2}=-2a \sin \theta \mathrm{d}\theta$$拉格朗日函数为：$$L=m_{1}a^{2}\left(\dot{\theta}^{2}+\Omega^{2}\sin ^{2}\theta\right)+2 m_{2}a^{2}\sin ^{2}\theta\dot{\theta}^{2}+2 ga\left(m_{1}+m_{2}\right)\cos\theta .$$
+解释：$(\mathrm{d}l_{1})^2$ 的计算可参考公式 4.6，此处因为 $a$ 大小固定，所以没有 $\mathrm{d}a$ 这一项；$\mathrm{d}l_{2}$ 的计算，$$\mathrm{d}l_2 = l_2(\theta + \mathrm{d}\theta) - l_2(\theta)= 2a[\cos(\theta + \mathrm{d}\theta) - \cos\theta]$$
+对于小量 $\mathrm{d}\theta$：
+$$\cos(\theta + \mathrm{d}\theta) \approx \cos\theta - \sin\theta \cdot \mathrm{d}\theta$$
+（这可以通过泰勒展开或者 $\cos$ 和差化积公式得到一样的结论）
+
+求 $v_{1}^2$，已知：$$\begin{align}
+\mathrm{d}l_1^2 &= a^2(\dot{\theta} \mathrm{d}t)^2 + a^2\sin^2\theta(\dot{\varphi} \mathrm{d}t)^2 \\
+&= a^2\dot{\theta}^2(\mathrm{d}t)^2 + a^2\sin^2\theta\dot{\varphi}^2(\mathrm{d}t)^2 \\
+&= (a^2\dot{\theta}^2 + a^2\sin^2\theta\dot{\varphi}^2)(\mathrm{d}t)^2
+\end{align}$$因此：$$v_1^2 = \frac{\mathrm{d}l_1^2}{(\mathrm{d}t)^2} = a^2\dot{\theta}^2 + a^2\sin^2\theta\dot{\varphi}^2$$
+同样，$$v_{2}^2=4a^2\sin^{2}\theta\dot{\theta}^2$$
+势能中高度的求解比较容易，略。
 
